# MarkovChains

./: README.md  main.py
data/: hp_spells.txt
mark_chains_prj/: README.md  main.py  pyproject.toml
mark_chains_prj/mark_chains_prj/data/: hp_spells.txt
tests/: test_mark_chain.py
