[tool.poetry]
name = "mark-chains-prj"
version = "0.1.0"
description = ""
authors = ["Soraia Tavares <soraiaoliveira094@gmail.com>"]
readme = "README.md"
packages = [{include = "mark_chains_prj"}]

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
pytest-cov = "^4.0.0"
pre-commit = "^3.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
